# TorchCraft

./: .gitmodules
BWEnv/: CMakeLists.txt
BWEnv/src/: controller.cc
docs/user/: openbw.md
py/: setup.py
